--- a/index.html
+++ b/index.html
@@ -1,136 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Omsorg och Framtid</title>
+  <meta name="description" content="Omsorg och Framtid erbjuder professionella vård- och omsorgstjänster med fokus på trygghet, kvalitet och respekt." />
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      color: #222;
+      background-color: #f9f9f9;
+    }
+    header {
+      background-color: #2f6f6f;
+      color: #fff;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    section {
+      max-width: 900px;
+      margin: auto;
+      padding: 2rem 1rem;
+      background-color: #fff;
+    }
+    h1, h2 {
+      color: #2f6f6f;
+    }
+    .services ul {
+      list-style: none;
+      padding: 0;
+    }
+    .services li {
+      padding: 0.5rem 0;
+      border-bottom: 1px solid #ddd;
+    }
+    .cta {
+      background-color: #e6f2f2;
+      padding: 1.5rem;
+      margin-top: 2rem;
+      text-align: center;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      background-color: #eee;
+    }
+    a {
+      color: #2f6f6f;
+      text-decoration: none;
+      font-weight: bold;
+    }
+  </style>
 </head>
-<body class="bg-gradient-to-br from-indigo-900 to-purple-800 min-h-screen flex flex-col items-center justify-center p-6">
-  <div class="text-center mb-8">
-    <h1 class="text-4xl font-bold text-white mb-4">Welcome to my website</h1>
-    <img src="NoBitches.png" class="mx-auto rounded-xl shadow-lg mb-8 w-full max-w-md">
+<body>
+
+<header>
+  <h1>Omsorg och Framtid</h1>
+  <p>Professionella vård- och omsorgstjänster med människan i fokus</p>
+</header>
+
+<section>
+  <h2>Om verksamheten</h2>
+  <p>
+    Omsorg och Framtid erbjuder trygga och kvalitativa tjänster inom vård och omsorg.
+    Verksamheten bygger på lång erfarenhet, professionell kompetens och respekt
+    för varje individs behov.
+  </p>
+
+  <h2>Tjänster</h2>
+  <div class="services">
+    <ul>
+      <li>Vård- och omsorgstjänster enligt överenskommelse</li>
+      <li>Stöd till individer och anhöriga</li>
+      <li>Hälsofrämjande och förebyggande insatser</li>
+      <li>Konsultation och uppdrag inom omsorg</li>
+    </ul>
   </div>
 
-  <!-- Login / Signup -->
-  <div class="max-w-md w-full bg-white/10 backdrop-blur-md rounded-xl shadow-2xl overflow-hidden p-6" data-aos="fade-up">
-    <h2 class="text-2xl font-bold text-white text-center mb-4">Login or Sign Up</h2>
+  <h2>Arbetssätt</h2>
+  <p>
+    Arbetet präglas av professionalism, tydlig kommunikation och hög etik.
+    Varje uppdrag anpassas efter situation, behov och mål.
+  </p>
 
-    <input id="username" type="text" placeholder="Username" class="w-full px-4 py-2 mb-3 rounded bg-white/90 text-gray-800 focus:outline-none focus:ring-2 focus:ring-purple-400">
-    <input id="password" type="password" placeholder="Password" class="w-full px-4 py-2 mb-3 rounded bg-white/90 text-gray-800 focus:outline-none focus:ring-2 focus:ring-purple-400">
-    <input id="referral" type="text" placeholder="Referral code (optional)" class="w-full px-4 py-2 mb-4 rounded bg-white/90 text-gray-800 focus:outline-none focus:ring-2 focus:ring-green-400">
-
-    <div class="flex justify-between">
-      <button id="loginBtn" class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded-lg flex items-center">
-        <i data-feather="log-in" class="mr-2"></i> Login
-      </button>
-      <button id="signupBtn" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg flex items-center">
-        <i data-feather="user-plus" class="mr-2"></i> Sign Up
-      </button>
-    </div>
-    <div class="mt-4 flex justify-center">
-      <button id="removeAllBtn" class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded-lg flex items-center">
-        <i data-feather="trash-2" class="mr-2"></i> Remove All Accounts
-      </button>
-    </div>
-
-    <p class="text-sm text-center text-yellow-300 mt-3">✨ Sign up now to get a free shiny star ✨</p>
-    <p id="message" class="text-sm text-center text-white/80 mt-4"></p>
+  <div class="cta">
+    <h2>Kontakt</h2>
+    <p>
+      För förfrågningar eller mer information, kontakta:
+    </p>
+    <p>
+      <strong>E-post:</strong> kontakt@omsorgochframtid.se<br />
+      <strong>Telefon:</strong> 07X-XXX XX XX
+    </p>
   </div>
+</section>
 
-  <script>
-    AOS.init();
-    feather.replace();
-  
-    const usernameInput = document.getElementById('username');
-    const passwordInput = document.getElementById('password');
-    const referralInput = document.getElementById('referral');
-    const loginBtn = document.getElementById('loginBtn');
-    const signupBtn = document.getElementById('signupBtn');
-    const message = document.getElementById('message');
-  
-    function getUsers() {
-      return JSON.parse(localStorage.getItem('users') || '{}');
-    }
-    function saveUsers(users) {
-      localStorage.setItem('users', JSON.stringify(users));
-    }
-  
-    // --- SIGNUP ---
-    signupBtn.addEventListener('click', () => {
-      const username = usernameInput.value.trim();
-      const password = passwordInput.value.trim();
-      const referral = referralInput.value.trim();
-  
-      if (!username || !password) {
-        message.textContent = "Please enter a username and password.";
-        return;
-      }
-  
-      const users = getUsers();
-      if (users[username]) {
-        message.textContent = "Username already exists.";
-        return;
-      }
-  
-      // New user object
-      users[username] = { password: password, referralBonus: false };
-  
-      // --- Referral system starts here ---
-      if (referral && users[referral]) {
-        users[username].referralBonus = true; // new user starts at 20
-  
-        if (!users[referral].gotReferralBonus) {
-          users[referral].gotReferralBonus = true;
-  
-          // Instantly boost referrer’s number +10
-          const refNumberKey = referral + "_number";
-          const refNumber = parseInt(localStorage.getItem(refNumberKey) || "10");
-          localStorage.setItem(refNumberKey, refNumber + 10);
-  
-          // Save referral history
-          const refHistoryKey = referral + "_referrals";
-          const history = JSON.parse(localStorage.getItem(refHistoryKey) || "[]");
-          history.push(username);
-          localStorage.setItem(refHistoryKey, JSON.stringify(history));
-        }
-      }
-      // --- Referral system ends here ---
-  
-      saveUsers(users);
-      message.textContent = "⭐ Account created successfully!";
-    });
-  
-    // --- LOGIN ---
-    loginBtn.addEventListener('click', () => {
-      const username = usernameInput.value.trim();
-      const password = passwordInput.value.trim();
-  
-      if (!username || !password) {
-        message.textContent = "Please enter a username and password.";
-        return;
-      }
-  
-      const users = getUsers();
-      if (users[username] && users[username].password === password) {
-        message.textContent = "Login successful!";
-        localStorage.setItem('loggedInUser', username);
-        window.location.href = "ganyu.html";
-      } else {
-        message.textContent = "Invalid username or password.";
-      }
-    });
-  
-    // --- Remove all accounts button (testing only) ---
-    document.getElementById('removeAllBtn').addEventListener('click', () => {
-      if (confirm("Are you sure you want to delete ALL accounts and data? This cannot be undone.")) {
-        localStorage.clear();
-        message.textContent = "🗑️ All accounts and data removed.";
-      }
-    });
-  </script>
+<footer>
+  <p>&copy; 2025 Omsorg och Framtid. Alla rättigheter förbehållna.</p>
+</footer>
+
 </body>
 </html>
