--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Omsorg och Framtid</title>
-  <meta name="description" content="Omsorg och Framtid erbjuder professionella vård- och omsorgstjänster med fokus på trygghet, kvalitet och respekt." />
+  <meta name="description" content="Omsorg och framtid erbjuder både omsorg och framtid" />
   <style>
     body {
       margin: 0;
@@ -59,47 +59,44 @@
 
 <header>
   <h1>Omsorg och Framtid</h1>
-  <p>Professionella vård- och omsorgstjänster med människan i fokus</p>
+  <p>Professionella vård och vård</p>
 </header>
 
 <section>
   <h2>Om verksamheten</h2>
   <p>
-    Omsorg och Framtid erbjuder trygga och kvalitativa tjänster inom vård och omsorg.
-    Verksamheten bygger på lång erfarenhet, professionell kompetens och respekt
-    för varje individs behov.
+    vård och omsorg är nice :D
   </p>
 
   <h2>Tjänster</h2>
   <div class="services">
     <ul>
-      <li>Vård- och omsorgstjänster enligt överenskommelse</li>
-      <li>Stöd till individer och anhöriga</li>
-      <li>Hälsofrämjande och förebyggande insatser</li>
-      <li>Konsultation och uppdrag inom omsorg</li>
+      <li>turi</li>
+      <li>ip ip ip</li>
+      <li>wow</li>
+      <li>cool</li>
     </ul>
   </div>
 
   <h2>Arbetssätt</h2>
   <p>
-    Arbetet präglas av professionalism, tydlig kommunikation och hög etik.
-    Varje uppdrag anpassas efter situation, behov och mål.
+    jag arbetar med vård
   </p>
 
   <div class="cta">
     <h2>Kontakt</h2>
     <p>
-      För förfrågningar eller mer information, kontakta:
+      kontakta mig på dessa:
     </p>
     <p>
-      <strong>E-post:</strong> kontakt@omsorgochframtid.se<br />
-      <strong>Telefon:</strong> 07X-XXX XX XX
+      <strong>Epost:</strong> markaydin13@gmail.com<br />
+      <strong>Telefon:</strong> 0724455822
     </p>
   </div>
 </section>
 
 <footer>
-  <p>&copy; 2025 Omsorg och Framtid. Alla rättigheter förbehållna.</p>
+  wow cool websida ending
 </footer>
 
 </body>
