--- a/start.html
+++ b/start.html
@@ -1,1 +1,103 @@
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Omsorg och Framtid</title>
+  <meta name="description" content="Omsorg och framtid erbjuder både omsorg och framtid" />
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      color: #222;
+      background-color: #f9f9f9;
+    }
+    header {
+      background-color: #2f6f6f;
+      color: #fff;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    section {
+      max-width: 900px;
+      margin: auto;
+      padding: 2rem 1rem;
+      background-color: #fff;
+    }
+    h1, h2 {
+      color: #2f6f6f;
+    }
+    .services ul {
+      list-style: none;
+      padding: 0;
+    }
+    .services li {
+      padding: 0.5rem 0;
+      border-bottom: 1px solid #ddd;
+    }
+    .cta {
+      background-color: #e6f2f2;
+      padding: 1.5rem;
+      margin-top: 2rem;
+      text-align: center;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      background-color: #eee;
+    }
+    a {
+      color: #2f6f6f;
+      text-decoration: none;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
 
+<header>
+  <h1>Omsorg och Framtid</h1>
+  <p>Professionella vård och vård</p>
+</header>
+
+<section>
+  <h2>Om verksamheten</h2>
+  <p>
+    vård och omsorg är nice :D
+  </p>
+
+  <h2>Tjänster</h2>
+  <div class="services">
+    <ul>
+      <li>turi</li>
+      <li>ip ip ip</li>
+      <li>wow</li>
+      <li>cool</li>
+    </ul>
+  </div>
+
+  <h2>Arbetssätt</h2>
+  <p>
+    jag arbetar med vård
+  </p>
+
+  <div class="cta">
+    <h2>Kontakt</h2>
+    <p>
+      kontakta mig på dessa:
+    </p>
+    <p>
+      <strong>Epost:</strong> markaydin13@gmail.com<br />
+      <strong>Telefon:</strong> 0724455822
+    </p>
+  </div>
+</section>
+
+<footer>
+  wow cool websida ending
+</footer>
+
+</body>
+</html>
