--- a/index.html
+++ b/index.html
@@ -10,23 +10,33 @@
       margin: 0;
       height: 100vh;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       background-color: #f9f9f9;
+      font-family: Arial, sans-serif;
+    }
+
+    h1 {
+      margin-bottom: 1rem;
+      color: #2f6f6f;
     }
 
     img {
-      max-width: 100%;
-      height: auto;
+      max-width: 90%;
+      max-height: 80%;
       cursor: pointer;
+      border-radius: 6px;
     }
   </style>
 </head>
 
 <body>
 
+  <h1>God jul + 50 årsdag - 1 månad</h1>
+
   <a href="start.html">
-    <img src="jul.jpg" alt="Omsorg och Framtid">
+    <img src="jul.jpg" alt="God jul från Omsorg och Framtid" />
   </a>
 
 </body>
