--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body>
 
-  <h1>God jul + 50 årsdag - 1 månad</h1>
+  <h1>God jul + 50 årsdag - ~1 månad ^^</h1>
 
   <a href="start.html">
     <img src="jul.jpg" alt="God jul från Omsorg och Framtid" />
