--- a/start.html
+++ b/start.html
@@ -71,7 +71,7 @@
   <h2>Tjänster</h2>
   <div class="services">
     <ul>
-      <li>turi</li>
+      <li>coola tjänster som erbjuds som turi</li>
       <li>ip ip ip</li>
       <li>wow</li>
       <li>cool</li>
