--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <h1>God jul + 50 årsdag - ~1 månad ^^</h1>
 
   <a href="start.html">
-    <img src="jul.jpg" alt="God jul från Omsorg och Framtid" />
+    <img src="jul.jpg" alt="God jul" />
   </a>
 
 </body>
