--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <h1>God jul och grattis på födelsedagen</h1>
 
   <a href="start.html">
-    <img src="jul.jpg" alt="God jul" />
+    <img src="lisa.jpg" alt="God jul" />
   </a>
 
 </body>
