--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
 <body>
 
   <h1>God jul och grattis på födelsedagen</h1>
+<center>
+    <a href="start.html">
+      <img src="lisa.jpg" alt="God jul" />
+    </a>
+</center>
 
-  <a href="start.html">
-    <img src="lisa.jpg" alt="God jul" />
-  </a>
 
 </body>
 </html>
