--- a/index.html
+++ b/index.html
@@ -15,18 +15,24 @@
       align-items: center;
       background-color: #f9f9f9;
       font-family: Arial, sans-serif;
+      padding: 25px;
+      box-sizing: border-box;
     }
 
     h1 {
       margin-bottom: 1rem;
       color: #2f6f6f;
+      text-align: center;
     }
 
     img {
-      max-width: 90%;
-      max-height: 80%;
+      width: 100%;
+      max-width: 300px;
+      height: auto;
       cursor: pointer;
       border-radius: 6px;
+      display: block;
+      margin: 0 auto;
     }
   </style>
 </head>
@@ -34,12 +40,9 @@
 <body>
 
   <h1>God jul och grattis på födelsedagen</h1>
-<center>
-    <a href="start.html">
-      <img src="lisa.jpg" alt="God jul" />
-    </a>
-</center>
-
+  <a href="start.html">
+    <img src="lisa.jpg" alt="God jul" />
+  </a>
 
 </body>
 </html>
