--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background-color: #f9f9f9;
+      background-color: black;
       font-family: Arial, sans-serif;
       padding: 25px;
       box-sizing: border-box;
+      color: #ffffff;
     }
 
     h1 {
       margin-bottom: 1rem;
-      color: #2f6f6f;
+      color: #80cbc4; /* a soft teal to contrast black */
       text-align: center;
     }
 
