--- a/start.html
+++ b/start.html
@@ -11,7 +11,7 @@
       font-family: Arial, sans-serif;
       line-height: 1.6;
       color: #222;
-      background-color: #f9f9f9;
+      background-color: black;
     }
     header {
       background-color: #2f6f6f;
